--- a/main.html
+++ b/main.html
@@ -3,14 +3,6 @@
     <head><title>TypeScript Greeter</title></head>
     <body>
         <canvas id="myCanvas" width="600" height="600"></canvas>
-        <script src="dist/graphics/IRenderable.js"></script>
-        <script src="dist/graphics/Rectangle.js"></script>
-        <script src="dist/graphics/Renderer.js"></script>
-        <script src="dist/physics/NtBase.js"></script>
-        <script src="dist/physics/NtIRenderer.js"></script>
-        <script src="dist/physics/NtRectangle.js"></script>
-        <script src="dist/physics/NtVec.js"></script>
-        <script src="dist/physics/NtWorld.js"></script>
-        <script src="dist/main.js"></script>
+        <script src="newtn.js"></script>
     </body>
 </html>
